--- a/src/main/webapp/emr/admin/signs.xhtml
+++ b/src/main/webapp/emr/admin/signs.xhtml
@@ -16,46 +16,63 @@
             <p:focus id="selectFocus" context="gpSelect" />
             <p:focus id="detailFocus" context="gpDetail" />
 
-            <div class="row" >
-                <div class="col-md-5" >
-                    <h:panelGrid id="gpSelect" columns="1"  >
-                        <p:panel >
-                            <h:panelGrid id="gpSelectText" >
-                                <p:selectOneListbox  id="lstSelect"   value="#{signController.current}" style="min-width: 223px; max-height: 400px;">
+            <p:panel header="Manage Signs" >
+                <div class="row" >
+                    <div class="col-md-5" >
+                        <h:panelGrid id="gpSelect" columns="1"   class="w-100">
+                            <h:panelGrid id="gpSelectButtons" columns="2"   class="w-100">
+                                <p:commandButton id="btnAdd" 
+                                                 value="Add" 
+                                                 action="#{signController.prepareAdd()}"  
+                                                 class="w-100"
+                                                 update="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" >
+                                </p:commandButton>
+                                <p:commandButton 
+                                    id="btnDelete" 
+                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" 
+                                    action="#{signController.delete()}"  
+                                    value="Delete" 
+                                    class="w-100">
+                                </p:commandButton>
+                            </h:panelGrid>
+                            <h:panelGrid id="gpSelectText" class="w-100" >
+                                <p:selectOneListbox  id="lstSelect"   
+                                                     value="#{signController.current}"
+                                                     class="w-100">
                                     <f:selectItems  value="#{signController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                     <f:ajax render="gpDetail" execute="lstSelect" >
                                     </f:ajax>
                                 </p:selectOneListbox>
                             </h:panelGrid>
-                            <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                <p:commandButton id="btnAdd" value="Add" action="#{signController.prepareAdd()}" styleClass="buttons" update="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" onclick="onSubmitButton();"  >
-                                </p:commandButton>
-                                <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                            return false;" action="#{signController.delete()}"  value="Delete"  >
-                                </p:commandButton>
-                            </h:panelGrid>
-                        </p:panel>
-                    </h:panelGrid  >
-                </div>
-                <div class="col-md-5" >
-                    <p:panel>
-                        <h:panelGrid id="gpDetail" columns="1">
-                            <h:panelGrid id="gpDetailText" columns="2">
+
+                        </h:panelGrid  >
+                    </div>
+                    <div class="col-md-7"  >
+
+                        <h:panelGrid id="gpDetail" columns="1" class="w-100">
+                            <h:panelGrid id="gpDetailText" columns="2" class="w-100">
                                 <h:outputText id="lblName" value="Name" ></h:outputText>
-                                <p:inputText autocomplete="off" id="txtName" value="#{signController.current.name}"  ></p:inputText>
+                                <p:inputText autocomplete="off" id="txtName" value="#{signController.current.name}"   class="w-100" ></p:inputText>
                                 <h:outputText id="lblCode" value="Code" ></h:outputText>
-                                <p:inputText autocomplete="off" id="txtCode" value="#{signController.current.code}"  ></p:inputText>                                    
+                                <p:inputText autocomplete="off" id="txtCode" value="#{signController.current.code}"   class="w-100"></p:inputText>                                    
                                 <h:outputText id="lblDes" value="Description" ></h:outputText>
-                                <p:inputTextarea id="txtDes" value="#{signController.current.descreption}"  ></p:inputTextarea>
+                                <p:inputTextarea id="txtDes" value="#{signController.current.descreption}"  class="w-100" ></p:inputTextarea>
                             </h:panelGrid>
-                            <h:panelGrid id="gpDetailButtons" columns="2">
-                                <p:commandButton id="btnSave" value="Save" action="#{signController.saveSelected()}" styleClass="buttons" update="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  process="gpDetail" onclick="onSubmitButton();">
+                            <h:panelGrid id="gpDetailButtons" columns="2"  class="w-100">
+                                <p:commandButton id="btnSave" value="Save" 
+                                                 action="#{signController.saveSelected()}"  class="w-100"
+                                                 update="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  
+                                                 process="gpDetail" >
                                 </p:commandButton>
                             </h:panelGrid>
                         </h:panelGrid>
-                    </p:panel>
+
+                    </div>
                 </div>
-            </div>
+            </p:panel>
+
+
 
         </h:form>
 
