--- a/src/main/webapp/emr/admin/vocabularies.xhtml
+++ b/src/main/webapp/emr/admin/vocabularies.xhtml
@@ -12,7 +12,7 @@
 
         <h:panelGroup >
             <h:form  >
-                <p:growl />
+                
                 <p:focus id="selectFocus" context="gpSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
                 <p:panel header="Manage Vocabularies" >
@@ -22,20 +22,24 @@
                                 <h:panelGrid id="gpSelectButtons" columns="2"  class="w-100" >
                                     <p:commandButton id="btnAdd" 
                                                      value="Add" 
+                                                     process="btnAdd"
+                                                     update="lstSelect txtName txtDes detailFocus"
                                                      action="#{vocabularyController.prepareAdd()}" 
                                                      class="w-100" >
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
-                                        </f:ajax>
                                     </p:commandButton>
                                     <p:commandButton id="btnDelete"
                                                      onclick="if (!confirm('Are you sure you want to delete this record?'))
                                                                  return false;" 
                                                      class="w-100"
-                                                     action="#{vocabularyController.delete()}"  value="Delete"  >
+                                                     ajax="false"
+                                                     action="#{vocabularyController.delete()}"  
+                                                     value="Delete"  >
                                     </p:commandButton>
                                 </h:panelGrid>
 
-                                <p:selectOneListbox  id="lstSelect"   
+                                <p:selectOneListbox  id="lstSelect"  
+                                                     filter="true"
+                                                     filterMatchMode="contains"
                                                      class="w-100 my-1"
                                                      value="#{vocabularyController.current}" style="min-width: 223px">
                                     <f:selectItems  value="#{vocabularyController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
@@ -48,23 +52,35 @@
                         </div>
                         <div class="col-md-7" >
                             <h:panelGrid id="gpDetail" columns="1" class="w-100">
-                                <h:panelGrid id="gpDetailText" columns="2" class="w-100">
+                                <p:panelGrid id="gpDetailText" columns="2" class="w-100">
                                     <p:outputLabel id="lblName" value="Name"></p:outputLabel>
-                                    <p:inputText autocomplete="off" id="txtName"  class="w-100" value="#{vocabularyController.current.name}"  ></p:inputText>
+                                    <p:inputText 
+                                        required="true"
+                                        autocomplete="off" 
+                                        id="txtName" 
+                                        class="w-100" 
+                                        value="#{vocabularyController.current.name}"  ></p:inputText>
                                     <p:outputLabel id="lblDes" value="Descreption" ></p:outputLabel>
                                     <p:inputTextarea id="txtDes"  
                                                      class="w-100"  
                                                      value="#{vocabularyController.current.description}"  >
                                     </p:inputTextarea>
-                                </h:panelGrid>
+                                </p:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
-                                    <p:commandButton id="btnSave" value="Save" action="#{vocabularyController.saveSelected()}" class="w-100">
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
-                                        </f:ajax>
+                                    <p:commandButton id="btnSave" 
+                                                     value="Save" 
+                                                     process="btnSave txtName txtDes"
+                                                     update="lstSelect msg selectFocus"
+                                                     action="#{vocabularyController.saveSelected()}" class="w-100">
                                     </p:commandButton>
                                     <p:defaultCommand target="btnSave"/>
                                 </h:panelGrid>
                             </h:panelGrid>
+                        </div>
+                    </div>
+                    <div class="row" >
+                        <div class="col-md-12" >
+                            <p:growl id="msg"/>
                         </div>
                     </div>
 
