--- a/src/main/webapp/emr/admin/diagnoses.xhtml
+++ b/src/main/webapp/emr/admin/diagnoses.xhtml
@@ -22,7 +22,9 @@
                                                  update="gpDetail lstSelect detailFocus" 
                                                  action="#{diagnosisController.prepareAdd()}"  >
                                 </p:commandButton>
-                                <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                <p:commandButton id="btnDelete" 
+                                                 ajax="false"
+                                                 onclick="if (!confirm('Are you sure you want to delete this record?'))
                                             return false;" 
                                                  class="w-100"
                                                  action="#{diagnosisController.delete()}" 
@@ -34,6 +36,9 @@
 
                             <h:panelGrid id="gpSelect" class="w-100">
                                 <p:selectOneListbox id="lstSelect" 
+                                                    filter="true"
+                                                    filterMatchMode="contains"
+                                                    scrollHeight="500"
                                                     value="#{diagnosisController.current}">
                                     <f:selectItems value="#{diagnosisController.items}" 
                                                    var="myItem" 
