Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -423,7 +423,7 @@
 
                 <div class="row" style="background-color: greenyellow;" >
                     <div class="col-md-12" >
-                        <h:form enctype="multipart/form-data" rendered="true" >
+                        <h:form enctype="multipart/form-data" rendered="false" >
                             <h:outputScript library="photocam" name="webcam.js" ></h:outputScript>
                             <p:commandButton type="button" value="Capture" onclick="PF('pc').capture()"/>
                             <p:photoCam 
