--- a/src/main/webapp/pharmacy/pharmacy_item_by_distributor.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_by_distributor.xhtml
@@ -1,46 +1,47 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/pharmacy/pharmacy_admin.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
-            <h:panelGrid columns="5" >              
+            <p:panel header="Manage Reordeing Data">
+                <h:panelGrid columns="5" >              
 
-                <h:outputLabel value="Distributor"/>
-                <h:outputLabel value="Item Name"/>
-                <h:outputLabel value="Item Code"/>
-                <h:outputLabel value="Category"/>
-                <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{itemsDistributorsController.createItemDistributorTable()}"/>
+                    <h:outputLabel value="Distributor"/>
+                    <h:outputLabel value="Item Name"/>
+                    <h:outputLabel value="Item Code"/>
+                    <h:outputLabel value="Category"/>
+                    <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{itemsDistributorsController.createItemDistributorTable()}"/>
 
-                <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.institution}" />
-                <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.itemName}" />
-                <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.code}" />
-                <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.category}" />
-                <h:outputLabel/><h:outputLabel/>
-            </h:panelGrid>
+                    <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.institution}" />
+                    <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.itemName}" />
+                    <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.code}" />
+                    <p:inputText autocomplete="off"  value="#{itemsDistributorsController.searchKeyword.category}" />
+                    <h:outputLabel/><h:outputLabel/>
+                </h:panelGrid>
 
-            <p:dataTable rowIndexVar="r" value="#{itemsDistributorsController.searchItems}" var="i">
-                <p:column>
-                    #{r+1}
-                </p:column>
-                <p:column headerText="Distributor">
-                    <h:outputLabel value="#{i.institution.name}"/>
-                </p:column>
-                <p:column headerText="Item Name" >
-                    <h:outputLabel value="#{i.item.name}"/>
-                </p:column>   
-                <p:column headerText="Item CODE" >
-                    <h:outputLabel value="#{i.item.code}"/>
-                </p:column>   
+                <p:dataTable rowIndexVar="r" value="#{itemsDistributorsController.searchItems}" var="i">
+                    <p:column>
+                        #{r+1}
+                    </p:column>
+                    <p:column headerText="Distributor">
+                        <h:outputLabel value="#{i.institution.name}"/>
+                    </p:column>
+                    <p:column headerText="Item Name" >
+                        <h:outputLabel value="#{i.item.name}"/>
+                    </p:column>   
+                    <p:column headerText="Item CODE" >
+                        <h:outputLabel value="#{i.item.code}"/>
+                    </p:column>   
 
-                <p:column headerText="Catogory" >
-                    <h:outputLabel value="#{i.item.category.name}"/>
-                </p:column>               
-            </p:dataTable>
-
+                    <p:column headerText="Catogory" >
+                        <h:outputLabel value="#{i.item.category.name}"/>
+                    </p:column>               
+                </p:dataTable>
+            </p:panel>
         </h:form>    
 
 
