--- a/src/main/webapp/pharmacy/pharmacy_report_non_moving_items.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_non_moving_items.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_admin.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="All Pharmacyutical Item report" >
 
