--- a/src/main/webapp/pharmacy/pharmacy_set_reorder_manage.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_set_reorder_manage.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_admin.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <h:panelGrid columns="2">
                         <h:outputText value="Institution" ></h:outputText>
