--- a/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/pharmacy/pharmacy_admin.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="content">
+    <ui:define name="subcontent">
         <h:form>
             <p:panel header="Manage Products"  >
                 <h:panelGrid columns="2" style="min-width: 100%;"  styleClass="alignTop" >
