Closes the issue#565 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/opd_search_user_bills.xhtml
+++ b/src/main/webapp/opd_search_user_bills.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>                 
                     <p:panel header="Search User Bills" >
