--- a/src/main/webapp/reportIncome/report_income_without_credit_by_institution.xhtml
+++ b/src/main/webapp/reportIncome/report_income_without_credit_by_institution.xhtml
@@ -10,11 +10,11 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
 
 
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
 
                 <h:form>
