--- a/src/main/webapp/opd_search_professional_payment_due_1.xhtml
+++ b/src/main/webapp/opd_search_professional_payment_due_1.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet> 
                     <p:panel header="OPD Doctor Payments And Due" >
