--- a/src/main/webapp/reportCashier/report_cashier_summery_all.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_all.xhtml
@@ -4,15 +4,15 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      
+     
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
 
 
-            <ui:define name="content">    
+            <ui:define name="subcontent">    
 
 
                 <h:form>
