--- a/src/main/webapp/reportCashier/report_opd_bill_payment_sheame.xhtml
+++ b/src/main/webapp/reportCashier/report_opd_bill_payment_sheame.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportCashier/report_cashier.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
