closed issue #563 Signed-off-by: ChamudithaJayathSiritunga <siritungachamuditha@gmail.com>

--- a/src/main/webapp/lab/calculation.xhtml
+++ b/src/main/webapp/lab/calculation.xhtml
@@ -6,8 +6,8 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/lab/administration.xhtml">
+            <ui:define name="subcontent">
                 <h:form >
                     <p:panel header="Manage Investigatio Calculations" >
                         <p:panelGrid columns="1" >
