--- a/src/main/webapp/lab/analyzer_test.xhtml
+++ b/src/main/webapp/lab/analyzer_test.xhtml
@@ -8,13 +8,13 @@
 
     <body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
             <ui:define name="title">
                 Manage Analyzer Tests
             </ui:define>
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:form >
 
