--- a/src/main/webapp/lab/dynamic_labels.xhtml
+++ b/src/main/webapp/lab/dynamic_labels.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panelGrid columns="1" >
                         <p:panel header="Select Investigation and Field" >
