--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/lab/administration.xhtml">
+            <ui:define name="subcontent">
                 <h:panelGroup >
                     <h:form id="form"  >
                         <p:growl />
