--- a/src/main/webapp/lab/investigation_item_value_path.xhtml
+++ b/src/main/webapp/lab/investigation_item_value_path.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:form >
 
