--- a/src/main/webapp/lab/investigation_upload.xhtml
+++ b/src/main/webapp/lab/investigation_upload.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
 
                 <h:form enctype="multipart/form-data">
