--- a/src/main/webapp/lab/investigation_values.xhtml
+++ b/src/main/webapp/lab/investigation_values.xhtml
@@ -9,9 +9,9 @@
 
     <body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form id="form">
 
                     <p:panel header="Manage Investigation Report Items" >
