--- a/src/main/webapp/lab/report_format.xhtml
+++ b/src/main/webapp/lab/report_format.xhtml
@@ -9,13 +9,13 @@
       xmlns:autocomplete="http://java.sun.com/jsf/composite/autocomplete">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
 
 
 
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:panelGroup rendered="#{!webUserController.hasPrivilege('LabReportFormatEditing')}" >
                     You are NOT Authorized
                 </h:panelGroup>
