--- a/src/main/webapp/lab/setup.xhtml
+++ b/src/main/webapp/lab/setup.xhtml
@@ -7,9 +7,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/lab/administration.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:form>
 
