Closed issue #570 Signed-off-by: ChamudithaJayathSiritunga <siritungachamuditha@gmail.com>

--- a/src/main/webapp/lab/patient_sample_list.xhtml
+++ b/src/main/webapp/lab/patient_sample_list.xhtml
@@ -8,9 +8,9 @@
 
     <body>
 
-        <ui:composition template="./../resources/template/template.xhtml">
+        <ui:composition template="/reportLab/lab_summeries_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form >
                     <p:panel header="Sample List" >
                         <h:panelGrid columns="2" >
