--- a/src/main/webapp/reportLab/client_list.xhtml
+++ b/src/main/webapp/reportLab/client_list.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportLab/lab_summeries_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
 
 
