--- a/src/main/webapp/reportLab/credit_company_bill_item_list.xhtml
+++ b/src/main/webapp/reportLab/credit_company_bill_item_list.xhtml
@@ -8,8 +8,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/reportLab/lab_summeries_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel  >
                         <f:facet name="header" >
